# financial-event-ledger

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  jaeger-config.yaml  otel-collector-config.yaml  prometheus.yml
account-service/: Dockerfile  pyproject.toml
account-service/app/: main.py
account-service/app/api/: routes_accounts.py  routes_audit.py
account-service/app/core/: config.py  errors.py  logging.py  telemetry.py  tracing.py
account-service/app/db/: models.py  session.py
account-service/app/repositories/: accounts.py  audit.py
account-service/app/schemas/: accounts.py  audit.py
account-service/app/services/: account_service.py
account-service/tests/: conftest.py  test_accounts.py  test_additional_coverage.py  test_errors_and_audit.py  test_main_telemetry_coverage.py  test_telemetry.py
contract-tests/consumer/: test_account_service_consumer_pact.py
contract-tests/pacts/: Event Gateway-Account Service.json
docs/: Design.docx  Event_Ledger_Project_Walkthrough_and_Technical_Guide.docx  Event_Ledger_Requirements_Specification.docx  Requirement.docx  ai-assisted-development.md  bonus-features.md  commit-plan.md  design.md  enhancement-commit-commands.md  opentelemetry-jaeger.md  ~$ent_Ledger_Requirements_Specification.docx
event-gateway/: Dockerfile  pyproject.toml
event-gateway/app/: main.py
event-gateway/app/api/: routes_accounts.py  routes_events.py
event-gateway/app/clients/: account_service.py
event-gateway/app/core/: config.py  errors.py  logging.py  rate_limit.py  telemetry.py  tracing.py
event-gateway/app/db/: models.py  session.py
event-gateway/app/repositories/: delivery_queue.py  events.py
event-gateway/app/schemas/: events.py
event-gateway/app/services/: async_fallback.py  event_service.py
event-gateway/tests/: conftest.py  test_additional_coverage.py  test_bonus_coverage.py  test_bonus_features.py  test_client_trace.py  test_errors_and_audit.py  test_events.py  test_integration.py  test_resiliency.py  test_telemetry.py
functional-tests/: Dockerfile  pyproject.toml
functional-tests/tests/: conftest.py  test_event_lifecycle.py  test_health.py  test_validation_and_trace.py
reports/: account-coverage.txt  account-coverage.xml  bonus-features-summary.md  collector-span-metrics.txt  coverage-summary.md  functional-coverage.md  functional-test-results.txt  gateway-coverage.txt  gateway-coverage.xml  jaeger-calls.json  jaeger-services.json  prometheus-account-metrics.json  prometheus-gateway-metrics.json  qa-summary.md
scripts/: test-monitoring.sh  test-persistence.sh  test-resiliency.sh  test-tracing.sh
(+1 files in other folders)
