[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "event-ledger-account-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "pydantic-settings>=2.2",
  "prometheus-client>=0.20",
  "opentelemetry-api==1.43.0",
  "opentelemetry-sdk==1.43.0",
  "opentelemetry-exporter-otlp-proto-http==1.43.0",
  "opentelemetry-instrumentation-fastapi==0.64b0"
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "httpx>=0.27",
  "pact-python>=3.4,<4"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
