[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "event-ledger-functional-tests"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pytest>=8", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "resiliency: changes Docker service availability",
  "persistence: restarts Docker services"
]
